fix(speaker): remove extra margin on mobile

--- a/src/pages/speakers.module.scss
+++ b/src/pages/speakers.module.scss
@@ -1,12 +1,15 @@
 .section {
-  margin-bottom: 1.5rem;
   display: flex;
   flex-direction: column;
+
+  @media (min-width: $theme-breakpoints-mobile) {
+    margin-bottom: 1.5rem;
+  }
 }
 
 .grid {
   align-self: center;
-  margin: 1rem 0;
+  margin: 1rem 0 0;
   width: 12.5rem;
 
   @media (min-width: $theme-breakpoints-potato) {
